@@ -7,8 +7,8 @@
     <ID>LongMethod:XmlVectorParser.kt$@SuppressLint("RestrictedApi") internal fun AndroidVectorParser.parsePath( res: Resources, theme: Resources.Theme?, attrs: AttributeSet, builder: ImageVector.Builder )</ID>
     <ID>LongMethod:XmlVectorParser.kt$@SuppressWarnings("RestrictedApi") internal fun AndroidVectorParser.createVectorImageBuilder( res: Resources, theme: Resources.Theme?, attrs: AttributeSet ): ImageVector.Builder</ID>
     <ID>LongMethod:XmlVectorParser.kt$internal fun AndroidVectorParser.parseGroup( res: Resources, theme: Resources.Theme?, attrs: AttributeSet, builder: ImageVector.Builder )</ID>
-    <ID>LongParameterList:AppThemeColorScheme.kt$AppThemeColorScheme$( primary: Color = this.primary, onPrimary: Color = this.onPrimary, primaryContainer: Color = this.primaryContainer, onPrimaryContainer: Color = this.onPrimaryContainer, inversePrimary: Color = this.inversePrimary, secondary: Color = this.secondary, onSecondary: Color = this.onSecondary, secondaryContainer: Color = this.secondaryContainer, onSecondaryContainer: Color = this.onSecondaryContainer, tertiary: Color = this.tertiary, onTertiary: Color = this.onTertiary, tertiaryContainer: Color = this.tertiaryContainer, onTertiaryContainer: Color = this.onTertiaryContainer, background: Color = this.background, onBackground: Color = this.onBackground, surface: Color = this.surface, onSurface: Color = this.onSurface, surfaceVariant: Color = this.surfaceVariant, onSurfaceVariant: Color = this.onSurfaceVariant, inverseSurface: Color = this.inverseSurface, inverseOnSurface: Color = this.inverseOnSurface, error: Color = this.error, onError: Color = this.onError, errorContainer: Color = this.errorContainer, onErrorContainer: Color = this.onErrorContainer, outline: Color = this.outline, )</ID>
-    <ID>LongParameterList:AppThemeColorScheme.kt$AppThemeColorScheme$( primary: Color, onPrimary: Color, primaryContainer: Color, onPrimaryContainer: Color, inversePrimary: Color, secondary: Color, onSecondary: Color, secondaryContainer: Color, onSecondaryContainer: Color, tertiary: Color, onTertiary: Color, tertiaryContainer: Color, onTertiaryContainer: Color, background: Color, onBackground: Color, surface: Color, onSurface: Color, surfaceVariant: Color, onSurfaceVariant: Color, inverseSurface: Color, inverseOnSurface: Color, error: Color, onError: Color, errorContainer: Color, onErrorContainer: Color, outline: Color, )</ID>
+    <ID>LongParameterList:AppThemeColorScheme.kt$AppThemeColorScheme$( primary: Color = this.primary, onPrimary: Color = this.onPrimary, primaryContainer: Color = this.primaryContainer, onPrimaryContainer: Color = this.onPrimaryContainer, inversePrimary: Color = this.inversePrimary, secondary: Color = this.secondary, onSecondary: Color = this.onSecondary, secondaryContainer: Color = this.secondaryContainer, onSecondaryContainer: Color = this.onSecondaryContainer, tertiary: Color = this.tertiary, onTertiary: Color = this.onTertiary, tertiaryContainer: Color = this.tertiaryContainer, onTertiaryContainer: Color = this.onTertiaryContainer, background: Color = this.background, onBackground: Color = this.onBackground, surface: Color = this.surface, onSurface: Color = this.onSurface, surfaceVariant: Color = this.surfaceVariant, onSurfaceVariant: Color = this.onSurfaceVariant, surfaceTint: Color = this.surfaceTint, inverseSurface: Color = this.inverseSurface, inverseOnSurface: Color = this.inverseOnSurface, error: Color = this.error, onError: Color = this.onError, errorContainer: Color = this.errorContainer, onErrorContainer: Color = this.onErrorContainer, outline: Color = this.outline, outlineVariant: Color = this.outlineVariant, scrim: Color = this.scrim, )</ID>
+    <ID>LongParameterList:AppThemeColorScheme.kt$AppThemeColorScheme$( primary: Color, onPrimary: Color, primaryContainer: Color, onPrimaryContainer: Color, inversePrimary: Color, secondary: Color, onSecondary: Color, secondaryContainer: Color, onSecondaryContainer: Color, tertiary: Color, onTertiary: Color, tertiaryContainer: Color, onTertiaryContainer: Color, background: Color, onBackground: Color, surface: Color, onSurface: Color, surfaceVariant: Color, onSurfaceVariant: Color, surfaceTint: Color, inverseSurface: Color, inverseOnSurface: Color, error: Color, onError: Color, errorContainer: Color, onErrorContainer: Color, outline: Color, outlineVariant: Color, scrim: Color )</ID>
     <ID>MagicNumber:AppThemeTypography.kt$AppThemeTypography$0.25</ID>
     <ID>MagicNumber:Dangerfile.df.kts$1200</ID>
     <ID>MagicNumber:Dangerfile.df.kts$20</ID>
